headless_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  # [podname].broker.nginx.svc.cluster.local
  clusterIP: None
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
