node-1-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: outside-1
spec:
  selector:
    app: nginx
    nifi-broker-id: "1"
  ports:
    - protocol: TCP
      targetPort: 80
      port: 32001
      nodePort: 32001
  type: NodePort
