node-2-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: outside-2
spec:
  selector:
    app: nginx
    nifi-broker-id: "2"
  ports:
    - protocol: TCP
      targetPort: 80
      port: 32002
      nodePort: 32002
  type: NodePort
